--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "amazon-chime-sdk-js": "^1.6.2",
     "axios": "^0.21.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
